--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,6 @@ body, html {
         border-top-left-radius: 10px;
         border-bottom-right-radius: 10px;
         padding: 5px;
-        &:hover{
-            background-color: blue;
-        }
     }
     .borderRound{
         width: 20%;
@@ -41,6 +38,12 @@ body, html {
         &:hover{
             background-color:rgb(57, 103, 255);
             color: white;
+        }
+    }
+    .Scroll{
+        scrollbar-width: none;
+        &::-webkit-scrollbar{
+            display: none;
         }
     }
 } 
