--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body, html {
         border-top-left-radius: 10px;
         border-bottom-right-radius: 10px;
         padding: 5px;
+        box-shadow: 0 0 10px 1px black;
     }
     .borderRound{
         width: 20%;
